# njq

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  default.nix  flake.nix  test.nix
.github/workflows/: rust.yml
cpp/: libsnix.h  main.cpp
rust_lib/: Cargo.toml
rust_lib/src/: lib.rs
src/: custom_builtins.rs  main.rs
tests/: integration.rs
