[package]
name = "njq"
version = "0.1.0"
edition = "2024"

[dependencies]
lazy_static = "1.4"
snix-eval = { git = "https://github.com/Rucadi/snix", package = "snix-eval" }
embed-nu = { git = "https://github.com/Rucadi/embed-nu", package = "embed-nu" }
bstr = "1.12.0"
serde_json = "1.0.140"
clap = { version="4.5.37" , features = ["derive"] }
anyhow = "1.0.98"

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.2"
tempfile = "3.13.0"
